# routes/usersRoutes.js
@@ -1,17 +1,19 @@
-// /routes/usersRoutes.js
+// /routes/userRoutes.js
 const express = require('express');
-const { getUsers, getUser } = require('../controllers/usersController');
+const { getUsers, getUser, updateUser, deleteUser } = require('../controllers/usersController');
 const { protect } = require('../middleware/auth');
 
 const router = express.Router();
 
-// All user routes are protected
+// All routes below require authentication
 router.use(protect);
 
 router.route('/')
   .get(getUsers);
 
 router.route('/:id')
-  .get(getUser);
+  .get(getUser)
+  .put(updateUser)
+  .delete(deleteUser);
 
 module.exports = router;
